--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 PORT = 3000
 MONGODB_URI = "mongodb+srv://binhnguyen:170116Abc@binhblog.c2lynpm.mongodb.net/?retryWrites=true&w=majority"
-MONGODB_NAME = "BinhBlog"
+MONGODB_DBNAME = "BinhBlog"
