--- a/package.json
+++ b/package.json
@@ -23,12 +23,14 @@
     "@nestjs/common": "^9.0.0",
     "@nestjs/config": "^2.2.0",
     "@nestjs/core": "^9.0.0",
+    "@nestjs/mongoose": "^9.2.1",
     "@nestjs/platform-express": "^9.0.0",
     "@nestjs/serve-static": "^3.0.0",
     "@types/mongoose": "^5.11.97",
     "class-validator": "^0.14.0",
     "dotenv": "^16.0.3",
     "mongoose": "^6.8.3",
+    "passport": "^0.6.0",
     "passport-jwt": "^4.0.1",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.2.0"
@@ -40,6 +42,8 @@
     "@types/express": "^4.17.15",
     "@types/jest": "29.2.4",
     "@types/node": "18.11.18",
+    "@types/passport": "^1.0.11",
+    "@types/passport-jwt": "^3.0.8",
     "@types/supertest": "^2.0.11",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
     "@typescript-eslint/parser": "^5.0.0",
